# adk-python

./: .gitignore  CHANGELOG.md  DOCUMENTATION_UPDATES.md  LICENSE  PROJECT_SUMMARY.md  README.md  USAGE.md  VERSIONING.md  mcp_server.py  mcp_server_project.toml  pyproject.toml  requirements.txt  setup.sh  simple_test.py  version.py
.github/workflows/: ci.yml  release.yml
contributing/samples/callbacks/: main.py
contributing/samples/fields_planner/: main.py
contributing/samples/hello_world/: main.py
contributing/samples/hello_world_litellm/: main.py
contributing/samples/hello_world_ollama/: main.py
contributing/samples/memory/: main.py
contributing/samples/token_usage/: main.py
contributing/samples/workflow_agent_seq/: main.py
examples/: CURSOR_SETUP.md  claude_desktop_config.json  cursor_mcp_config.json  cursor_mcp_config_simple.json  test_mcp_client.py
scripts/: release.sh
src/google/adk/: runners.py  telemetry.py
src/google/adk/agents/: base_agent.py  invocation_context.py  langgraph_agent.py  live_request_queue.py  readonly_context.py  transcription_entry.py
src/google/adk/cli/: cli.py  fast_api.py
src/google/adk/cli/utils/: evals.py
src/google/adk/code_executors/: code_execution_utils.py
src/google/adk/evaluation/: eval_case.py  local_eval_sets_manager.py  response_evaluator.py
src/google/adk/examples/: example.py  vertex_ai_example_store.py
src/google/adk/flows/llm_flows/: _code_execution.py  audio_transcriber.py  contents.py  functions.py
src/google/adk/memory/: memory_entry.py  vertex_ai_rag_memory_service.py
src/google/adk/models/: anthropic_llm.py  base_llm.py  base_llm_connection.py  gemini_llm_connection.py  google_llm.py  lite_llm.py  llm_request.py  llm_response.py
src/google/adk/sessions/: _session_util.py
src/google/adk/tools/: agent_tool.py  load_artifacts_tool.py
tests/integration/fixture/agent_with_config/: agent.py
tests/integration/fixture/callback_agent/: agent.py
tests/integration/fixture/customer_support_ma/: agent.py
tests/integration/utils/: test_runner.py
tests/unittests/: testing_utils.py
tests/unittests/agents/: test_base_agent.py  test_langgraph_agent.py  test_live_request_queue.py  test_loop_agent.py  test_parallel_agent.py  test_sequential_agent.py
tests/unittests/cli/utils/: test_evals.py
tests/unittests/fast_api/: test_fast_api.py
tests/unittests/flows/llm_flows/: _test_examples.py  test_async_tool_callbacks.py  test_functions_request_euc.py  test_functions_simple.py
tests/unittests/models/: test_litellm.py
tests/unittests/sessions/: test_session_service.py  test_vertex_ai_session_service.py
