[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata

name = "google-adk-mcp-server"
description = "MCP server exposing Google Agent Development Kit functionality"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Google ADK MCP Server Contributors" }
]
version = "1.0.0"
keywords = ["mcp", "model-context-protocol", "google-adk", "ai", "agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "google-adk>=1.0.0",
    "mcp>=1.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
homepage = "https://github.com/your-username/google-adk-mcp-server"
repository = "https://github.com/your-username/google-adk-mcp-server"
changelog = "https://github.com/your-username/google-adk-mcp-server/blob/main/CHANGELOG.md"
documentation = "https://github.com/your-username/google-adk-mcp-server/blob/main/README.md"
issues = "https://github.com/your-username/google-adk-mcp-server/issues"

[project.scripts]
google-adk-mcp-server = "mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0", 
    "pytest-mock>=3.14.0",
    "mypy>=1.15.0",
    "pylint>=2.6.0",
    "ruff>=0.1.0",
]

test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[tool.pytest.ini_options]
testpaths = [".", "examples"]
asyncio_mode = "auto"
addopts = "--verbose"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E501"]
